Fixed broken css var

--- a/styles/Informationen.module.css
+++ b/styles/Informationen.module.css
@@ -14,7 +14,7 @@
     transform: translateY(50%);
     height: 0.25rem;
     content: "";
-    background: var(--linear-090-main);
+    background: var(--linear-090-mainBlue-mainRed);
 }
 
 .title{
